# nap

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  PKGBUILD  README.md  autogen.sh  compile  config.h  config.h.in  config.status  configure  configure.ac  depcomp  install-sh  missing  nap.c  nap.h  test-nap  test-nap.c
.github/workflows/: ci.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
sleep/: README.md
src/: Makefile  Makefile.am  Makefile.in  kwpbar.h  nap.c  nap.h
src/.deps/: nap.Po
