AC_INIT([nap], [0.2.3], [chris@chriswarrick.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC_C99
AC_LANG([C])
AC_HEADER_STDC
AC_CHECK_HEADERS([ctype.h math.h stdio.h stdlib.h string.h sys/ioctl.h time.h unistd.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
